--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -46,7 +46,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item pr-3">
-                                    <a href="#" class="btn btn-custom btn-outline-info btn-lg" target="_blank">Free Download</a>
+                                    <a href="https://www.wrappixel.com/templates/materialpro-react-admin-lite/" class="btn btn-custom btn-outline-info btn-lg" target="_blank">Free Download</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="https://wrappixel.com/templates/materialpro-react-admin/?ref=33" class="btn btn-custom btn-info btn-lg" target="_blank">Check Pro Version</a>
@@ -116,7 +116,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center mt-4 mb-3">
-                                        <a href="#" class="btn btn-custom btn-outline-info btn-lg" target="_blank">Free Download</a>
+                                        <a href="https://www.wrappixel.com/templates/materialpro-react-admin-lite/" class="btn btn-custom btn-outline-info btn-lg" target="_blank">Free Download</a>
                                     </div>
                                 </div>
                             </div>
