--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -131,7 +131,7 @@
                     <div class="text-center mt-4">
                       <a
                         class="btn btn-danger btn-custom mb-2 mb-md-0"
-                        href="https://materialpro-react-free.netlify.app/"
+                        href="https://materialpro-react-free.netlify.app/#/starter"
                         target="_blank"
                         >Live Preview</a
                       >
