--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="" />
   <!-- Favicon icon -->
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/materialpro-favicon.png" />
-  <title>Material-Pro Free Bootstrap Admin Template by WrapPixel</title>
+  <title>Material-Pro Free React Admin Template by WrapPixel</title>
   <!-- Custom CSS -->
   <link href="dist/css/style.css" rel="stylesheet" />
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
