--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Material-Pro Free Bootstrap Admin Template by WrapPixel</title>
+    <title>Material-Pro Free React Admin Template by WrapPixel</title>
   </head>
   <body>
     <div id="root"></div>
