--- a/discount-code.html
+++ b/discount-code.html
@@ -97,7 +97,7 @@
       <div class="coupon-code mt-4"><small>Use Coupon code : upgrade30
         </small></div>
 
-        <a href="https://adminmart.com/templates/react/?ref=56" class="btn" target="_blank">Get Now</a>
+        <a href="https://www.wrappixel.com/templates/category/react-templates/?ref=376" class="btn" target="_blank">Get Now</a>
     </div>
   </div>
 </body>
