--- a/docs.html
+++ b/docs.html
@@ -4,12 +4,12 @@
 <head>
     <title>MaterialPro React Free Template | Docs</title>
     <meta http-equiv="refresh" 
-          content="0; URL = 'https://adminmart.github.io/free-documentation/react/materialpro/index.html'" />
+          content="0; URL = 'https://wrappixel.github.io/free-documentation-wp/react/materialpro/index.html'" />
 </head>
 
 <body>
     <h1>MaterialPro React Free Template</h1>
-    <a href="https://adminmart.github.io/free-documentation/react/materialpro/index.html">https://adminmart.github.io/free-documentation/react/materialpro/index.html</a>
+    <a href="https://wrappixel.github.io/free-documentation-wp/react/materialpro/index.html">https://wrappixel.github.io/free-documentation-wp/react/materialpro/index.html</a>
 </body>
 
 </html>
