--- a/hire-us.html
+++ b/hire-us.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>MatDash React Free Template</title>
+    <title>MaterialPro React Free Template</title>
     <meta http-equiv="refresh" 
           content="0; URL = 'https://www.wrappixel.com/hire-us/'" />
 </head>
 
 <body>
-    <h1>MatDash React Free Template</h1>
+    <h1>MaterialPro React Free Template</h1>
     <a href="https://www.wrappixel.com/hire-us/">https://www.wrappixel.com/hire-us/</a>
 </body>
 
